--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <section class="section-contacts">
         <div class="contacts__contacts">
-            <div class="container">
+            <!-- <div class="container"> -->
                 <div class="contacts__head">
                     <h3 class="contacts__h3">Контакты</h4>
                 </div>
@@ -156,7 +156,7 @@
                             <p class="elem__info">11:00 - 19:00 (Мск)</p>
                         </div>
                     </div>
-            </div>
+            <!-- </div> -->
         </div>
         <div class="contacts__pink">
             <h3 class="pink__h3">Заказать звонок</h3>
